yle-dl - download videos from Yle servers
Copyright 2009-2022 Antti Ajanki
Distributed under the GPL v3

<unreleased>

- Fixed a crash if a title is missing

Version 20220704

- Fixed series pages after changes in Areena

Version 20220610

- Downloading was failing sometimes because of a too small probe size

Version 20220531

- Switched back to HLS stream. MPEG-DASH resulted in slow and
  sometimes incomplete downloads. Expect again (harmless) warnings
  about subtitles.

Version 20220518

- Improved subtitle support by preferring MPEG-DASH streams over HLS
- Support collection pages, that is pages which have the title "Suositellut"

Version 20220425

- Compatible with the recent changes in Areena
- Follow redirects when downloading certain audio episodes
- Support the / character in --output-template
- Postprocessing scripts are working again

Version 20220213

- Downloading live streams works again
- Known bug: subtitles are not displayed on live stream
- Make it possible to download audio streams using ffmpeg

Version 20211213

- Some programs failed to download on the ffmpeg backend
- Remove an extra colon at the end of live stream filenames

Version 20211207

- Writing to standard output (--pipe and -o -) was broken in the previous release

Version 20211203

- Select the highest resolution by default on Pentulive (and other live streams)
- Record past events in Pentulive: --startposition -3600

Version 20210917

- Apparently each seasons of a series can have a distinct ID. Added
  support for those.
- --latestepisode is much faster than before

Version 20210808

- Some geo-restricted streams can now be downloaded outside Finland
- Changed the syntax of --output-template: separator characters are not
  inserted automatically anymore
- Proxy support for the HLS backend
- Word were sometimes missing from episode titles
- Support for new Arkisto URLs: https://yle.fi/aihe/a/

Version 20210704

- Support for new Svenska Arkivet URLs: https://svenska.yle.fi/a/